# AuronaCode-Early

./: .gitignore  GithubStatusChecker.py  README.md  biome.json  index.html  manager.py  package-lock.json  package.json  pnpm-lock.yaml  scratch_test.js  splash.html  terminal_diff.txt  terminal_diff_utf8.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: quality.yml  release.yml
Docs/: 0.3.0-Execution-Plan.md  0.3.0-Performance-Report.md  0.3.0-Release-Notes.md  0.3.0-TechnicalNotes.md  0.3.1-Release-Notes.md  Architecture.md  DesignPrinciples.md  FileTree.md  ProductVision.md
Src/: tabler.d.ts
Src/App/: App.tsx  Main.tsx  Splash.tsx  ThemeAccent.ts
Src/Core/: AppBootstrapper.tsx  AppServices.test.ts  AppServices.ts  Commands.ts  EventBus.ts  FileSystemService.ts  GitService.ts  Logger.ts  MonacoSetup.ts  NotificationService.ts  StorageManager.ts  (+3 more)
scripts/: check-desktop-boundaries.mjs  check-material-boundaries.mjs  extract-changelog.ts  smoke.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: GitCommit.ts  GitFile.ts  GitFullStatus.ts  SearchResult.ts  ShellProfile.ts
src-tauri/capabilities/: default.json  main.json  splash.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor.rs  lib.rs  lsp.rs  main.rs  performance.rs  process_tree.rs  pty.rs  search.rs
src-tauri/src/commands/: fs.rs  git.rs  ipc.rs  lsp_cmds.rs  mod.rs  utils.rs
(+113 files in other folders)
