[package]
name = "aurona_code"
version = "0.0.5"
description = "Aurona Code Beta"
authors = ["Aurona Team"]
edition = "2021"

[lib]
name = "aurona_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
portable-pty = "0.9.0"
