[package]
name = "aurona_code"
version = "0.2.10"
description = "Aurona Code Beta"
authors = ["Aurona Team"]
edition = "2021"

[lib]
name = "aurona_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
portable-pty = "0.9.0"
ignore = "0.4.26"
regex = "1.12.4"
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
base64 = "0.22.1"
dashmap = "6.2.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2"
ts-rs = "8.1"
ropey = "1.6"
"arc-swap" = "1.7"
sysinfo = "0.32"

[features]
devtools = []
